Fixed the height of all div to stretch the length of the window

--- a/css/onestopVancouver.css
+++ b/css/onestopVancouver.css
@@ -8,7 +8,7 @@
     float: left;
     max-width: 250px;
     min-width: 250px;
-    height: 100vh;
+    height: auto;
     background-color: #FFFFFF;
     overflow: scroll;
     transition: all 350ms;
